--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "scripts": {
     "clean": "rimraf dist",
     "declarations": "tsc -p tsconfig.types.json",
-    "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts' --out-dir 'dist/esm' --source-maps",
-    "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts' --out-dir 'dist/cjs' --source-maps",
-    "build:bundles": "cross-env BABEL_ENV=esmBundled rollup -c",
+    "build:esm": "tsc -p tsconfig.esm.json && echo '{\"type\": \"module\"}' > dist/esm/package.json",
+    "build:esm2": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts' --out-dir 'dist/esm' --source-maps",
+    "build:cjs": "tsc -p tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
+    "build:cjs2": "cross-env BABEL_ENV=cjs babel src --extensions '.ts' --out-dir 'dist/cjs' --source-maps",
     "build": "npm-run-all -l clean -p build:esm build:cjs declarations",
     "test": "jest",
     "coverage": "jest --coverage",
@@ -21,7 +22,9 @@
   },
   "files": [
     "src",
-    "dist"
+    "dist",
+    "tsconfig.json",
+    "package.json"
   ],
   "exports": {
     "types": "./dist/types/index.d.ts",
@@ -32,25 +35,26 @@
     "node": ">= 16"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
-    "@babel/core": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@types/jest": "^28.1.6",
+    "@rollup/plugin-babel": "^6.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/jest": "^29.2.2",
     "cross-env": "^7.0.3",
     "husky": "^7.0.4",
-    "jest": "^28.1.3",
+    "jest": "^29.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.77.2",
+    "rollup": "^3.3.0",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.7.4"
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@feugene/mu": "^4.1.2",
+    "@feugene/mu": "^4.1.3",
     "axios": "^0.27.2"
   },
   "nyc": {
@@ -62,14 +66,5 @@
     "last 2 versions",
     "not ie 11",
     "not op_mini all"
-  ],
-  "jest": {
-    "testMatch": [
-      "**/tests/**/*.[jt]s?(x)"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/tests/utils/"
-    ]
-  }
+  ]
 }
