--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "scripts": {
     "clean": "rimraf dist",
     "declarations": "tsc -p tsconfig.types.json",
-    "build:esm": "tsc -p tsconfig.esm.json && echo '{\"type\": \"module\"}' > dist/esm/package.json",
+    "build:esm": "tsc -p tsconfig.esm.json && yarn rename",
     "build:cjs": "tsc -p tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
     "build": "npm-run-all -l clean -p build:esm build:cjs declarations",
+    "rename": "ts-node ./.scripts/rename.ts",
     "test": "jest",
     "coverage": "jest --coverage",
     "lint": "prettier --config ./.prettierrc --write src/*.ts src/**/*.ts",
@@ -24,9 +25,10 @@
     "tsconfig.json",
     "package.json"
   ],
+  "module": "./dist/esm/index.mjs",
   "exports": {
     "types": "./dist/types/index.d.ts",
-    "import": "./dist/esm/index.js",
+    "import": "./dist/esm/index.mjs",
     "require": "./dist/cjs/index.js"
   },
   "engines": {
@@ -40,10 +42,11 @@
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@feugene/mu": "^4.1.3",
+    "@feugene/mu": "^4.1.7",
     "axios": "^0.27.2"
   },
   "nyc": {
